------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

July 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* No more funny snow covered boulders in weird places like New Attnam
	
July 4 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* A small bug in save.cpp corrected
	* A great bug in rooms.cpp corrected
	* You can now easily add new lock types
	* Disabled several of Hex's tests
	* 'K' now kicks instead of 'k'
	* Lyre picture added to item.pcx by Kahvi
	* Animated enner beast head and lyre's wielded picture added to humanoid.pcx
	  by Kahvi
	* Impenetrable jungle terrain + border tiles added to olterra.pcx by Kahvi
	* Added lyre of charm which can tame weak monsters

July 01 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Support for keyboards without number pad added
	* Some keys changed (because of the above change). Probably very annoying.

June 05 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Very basic worldmap tile types added. (much work needed still)

May 24 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>	

	* The new path-finding (or actually checking whether a path exists...) algorithm added
	* Few spelling mistakes in char.dat corrected
		
May 21 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>	

	* Dungeons work again.
	* A pathfinding algorithm. (That is not yet finished)   
	
May 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added second version of Corey's crystal level
	* Btw, this version doesn't work

May 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added first version of Corey's crystal level
	* Btw, Hex's code doesn't compile

May 19 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Compiles with gcc 3.3