@@ -7,10 +7,14 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+July 8 2003 Timo Kiviluoto <sonor@phpoint.fi>
+
+	* Corrected a fatal bug in the level loading code
+
 July 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* No more funny snow covered boulders in weird places like New Attnam
-	
+
 July 4 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* A small bug in save.cpp corrected
